; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_resource.c_pnp_add_mem_resource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_resource.c_pnp_add_mem_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnp_resource = type { %struct.resource }
%struct.resource = type { i32, i8*, i8* }
%struct.pnp_dev = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"can't add resource for MEM %#llx-%#llx\0A\00", align 1
@IORESOURCE_MEM = common dso_local global i32 0, align 4
@KERN_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"%pR\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pnp_resource* @pnp_add_mem_resource(%struct.pnp_dev* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.pnp_resource*, align 8
  %6 = alloca %struct.pnp_dev*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.pnp_resource*, align 8
  %11 = alloca %struct.resource*, align 8
  store %struct.pnp_dev* %0, %struct.pnp_dev** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.pnp_dev*, %struct.pnp_dev** %6, align 8
  %13 = call %struct.pnp_resource* @pnp_new_resource(%struct.pnp_dev* %12)
  store %struct.pnp_resource* %13, %struct.pnp_resource** %10, align 8
  %14 = load %struct.pnp_resource*, %struct.pnp_resource** %10, align 8
  %15 = icmp ne %struct.pnp_resource* %14, null
  br i1 %15, label %24, label %16

16:                                               ; preds = %4
  %17 = load %struct.pnp_dev*, %struct.pnp_dev** %6, align 8
  %18 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %17, i32 0, i32 0
  %19 = load i8*, i8** %7, align 8
  %20 = ptrtoint i8* %19 to i64
  %21 = load i8*, i8** %8, align 8
  %22 = ptrtoint i8* %21 to i64
  %23 = call i32 @dev_err(i32* %18, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i64 %20, i64 %22)
  store %struct.pnp_resource* null, %struct.pnp_resource** %5, align 8
  br label %44

24:                                               ; preds = %4
  %25 = load %struct.pnp_resource*, %struct.pnp_resource** %10, align 8
  %26 = getelementptr inbounds %struct.pnp_resource, %struct.pnp_resource* %25, i32 0, i32 0
  store %struct.resource* %26, %struct.resource** %11, align 8
  %27 = load i32, i32* @IORESOURCE_MEM, align 4
  %28 = load i32, i32* %9, align 4
  %29 = or i32 %27, %28
  %30 = load %struct.resource*, %struct.resource** %11, align 8
  %31 = getelementptr inbounds %struct.resource, %struct.resource* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load %struct.resource*, %struct.resource** %11, align 8
  %34 = getelementptr inbounds %struct.resource, %struct.resource* %33, i32 0, i32 2
  store i8* %32, i8** %34, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = load %struct.resource*, %struct.resource** %11, align 8
  %37 = getelementptr inbounds %struct.resource, %struct.resource* %36, i32 0, i32 1
  store i8* %35, i8** %37, align 8
  %38 = load i32, i32* @KERN_DEBUG, align 4
  %39 = load %struct.pnp_dev*, %struct.pnp_dev** %6, align 8
  %40 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %39, i32 0, i32 0
  %41 = load %struct.resource*, %struct.resource** %11, align 8
  %42 = call i32 @dev_printk(i32 %38, i32* %40, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), %struct.resource* %41)
  %43 = load %struct.pnp_resource*, %struct.pnp_resource** %10, align 8
  store %struct.pnp_resource* %43, %struct.pnp_resource** %5, align 8
  br label %44

44:                                               ; preds = %24, %16
  %45 = load %struct.pnp_resource*, %struct.pnp_resource** %5, align 8
  ret %struct.pnp_resource* %45
}

declare dso_local %struct.pnp_resource* @pnp_new_resource(%struct.pnp_dev*) #1

declare dso_local i32 @dev_err(i32*, i8*, i64, i64) #1

declare dso_local i32 @dev_printk(i32, i32*, i8*, %struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
